{
    "name": "TouchControls",
    "maps": [
        {
            "name": "Touch",
            "id": "4f61309a-57ef-48a7-ad48-b89634a04181",
            "actions": [
                {
                    "name": "TouchInput",
                    "type": "PassThrough",
                    "id": "a51d2826-dd98-4f8f-bf7c-ae0b917a6dad",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TouchHold",
                    "type": "Button",
                    "id": "f50902cc-a56b-4750-a8df-db2dd61b01f5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold"
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "80e2ddb2-309b-4f06-a1be-7e29c5a7b97b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "Hold"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f703a3c0-48dc-4b56-81c0-8698053f6a09",
                    "path": "<Touchscreen>/primaryTouch",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "50d96a39-55fe-475b-8301-f41d21ef15f0",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchHold",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c122e26c-3587-4b49-a209-6eed4c03d9d9",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}